--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
+    "firebase-tools": "^7.11.0",
+    "g": "^2.0.1",
     "rxjs": "^6.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
